--- a/televisores/Control
+++ b/televisores/Control
@@ -1,37 +1,44 @@
 class Control:
-    def __init__(self, tv) -> None:
+     def __init__(self, tv):
         self._tv = tv
-
-    def getTv (self):
+     def getTv(self):
         return self._tv
-    def setTv (self, tv):
-        self._tv = tv
-
-    def enlazar (self, tv):
-        self._tv = tv
-        tv.setControl (self)
-
-
-    def turnOn (self):
-        self._tv.turnOn()
-    def turnOff (self):
-        self._tv.turnOff()
-
-
-    def canalUp (self):
-        self._tv.canalUp()
-    def canalDown (self):
-        self._tv.canalDown()
-
-    def setCanal (self, canal):
-        self._tv.setCanal (canal)
-
-
-    def volumenUp (self):
-        self._tv.volumenUp()
-    def volumenDown (self):
-        self._tv.volumenDown()
     
-    def setVolumen (self, volumen):
-        self._tv.setVolumen (volumen)
+     def setTv(self, tv):
+        self._tv = tv   
 
+     def enlazar(self, tv):
+        self._tv = tv
+        tv.setControl(self)
+
+     def canalUp(self):
+        if self._tv:
+            self._tv.canalUp()
+
+     def canalDown(self):
+        if self._tv:
+            self._tv.canalDown()
+
+     def turnOn(self):
+        if self._tv:
+            self._tv.turnOn()
+    
+     def turnOff(self):
+        if self._tv:
+            self._tv.turnOff()
+
+     def volumenUp(self):
+        if self._tv:
+            self._tv.volumenUp()
+    
+     def volumenDown(self):
+        if self._tv:
+            self._tv.volumenDown()
+    
+     def setCanal(self, canal):
+        if self._tv:
+            self._tv.setCanal(canal)
+    
+     def setVolumen(self, volumen):
+        if self._tv and self._tv.getEstado():
+            self._tv.setVolumen(volumen)
